--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  border: 3px black solid;
+  border-radius: 8px;
+  padding: 2em;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
 }
 
 li {
   margin: 2em;
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
